--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,12 +21,18 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports:
-    imager
+    imager,
+    farver
 Suggests: 
     covr,
+    grDevices,
+    graphics,
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Depends: 
     R (>= 2.10)
 LazyData: true
 LazyDataCompression: xz
+VignetteBuilder: knitr
