--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,11 +22,11 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports:
     imager,
-    farver
-Suggests: 
-    covr,
+    farver,
     grDevices,
     graphics,
+Suggests: 
+    covr,
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
