complete palette create function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,11 @@
 export(contrast)
 export(image2rgb)
 export(is_sufficient)
+export(palette_create)
 importFrom(farver,convert_colour)
+importFrom(grDevices,dev.new)
 importFrom(grDevices,rgb)
+importFrom(graphics,barplot)
 importFrom(graphics,image)
 importFrom(imager,load.image)
+importFrom(stats,kmeans)
