--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(contrast)
 export(image2rgb)
 export(is_sufficient)
 export(palette_create)
+importFrom(cli,cli_inform)
+importFrom(cli,cli_warn)
 importFrom(farver,convert_colour)
 importFrom(grDevices,dev.new)
 importFrom(grDevices,rgb)
@@ -11,3 +13,4 @@ importFrom(graphics,barplot)
 importFrom(graphics,image)
 importFrom(imager,load.image)
 importFrom(stats,kmeans)
+importFrom(utils,menu)
