--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,10 @@ export(contrast)
 export(image2rgb)
 export(is_sufficient)
 export(palette_create)
+import(rgl)
+import(shiny)
+import(shinyjs)
+import(shinythemes)
 importFrom(Matrix,solve)
 importFrom(cli,cli_inform)
 importFrom(cli,cli_warn)
