--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
 pandoc: 2.17.1.1
 pkgdown: 2.0.7
 pkgdown_sha: ~
-articles: {}
-last_built: 2023-04-02T16:52Z
+articles:
+  Photopal: Photopal.html
+last_built: 2023-04-18T20:04Z
 
