--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,18 +2,15 @@ Package: Photopal
 Title: This package generates palettes from images
 Version: 0.0.0.1000
 Authors@R: 
-    c(person("Tyler",
-             email = "twiederich2@huskers.unl.edu",
-             role = c("aut"),
-             comment = c(ORCID = "YOUR-ORCID-ID")),
-      person("Muxin",
+    c(person("Muxin",
              email = "mhua2@huskers.unl.edu",
-             role = c("aut", "cre"),
-             comment = c(ORCID = "YOUR-ORCID-ID")),
+             role = c("aut", "cre")),
+      person("Tyler",
+             email = "twiederich2@huskers.unl.edu",
+             role = c("aut")),
       person("Charlie",
              email = "bonk.charlie@huskers.unl.edu",
-             role = c("aut"),
-             comment = c(ORCID = "YOUR-ORCID-ID"))
+             role = c("aut"))
            )
 Description: This package generates palettes from images.
 License: MIT + file LICENSE
