Added colorblind page

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(image2rgb)
 export(is_sufficient)
 export(palette_create)
 export(showcaseApp)
+import(imager)
+import(shiny)
+import(shinythemes)
 importFrom(Matrix,solve)
 importFrom(cli,cli_inform)
 importFrom(cli,cli_warn)
@@ -20,6 +23,5 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(imager,cimg)
 importFrom(imager,load.image)
-importFrom(shiny,runApp)
 importFrom(stats,kmeans)
 importFrom(utils,menu)
