--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,5 +23,6 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(imager,cimg)
 importFrom(imager,load.image)
+importFrom(shinycssloaders,withSpinner)
 importFrom(stats,kmeans)
 importFrom(utils,menu)
