--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,9 @@ Imports:
     shiny,
     cli,
     utils,
-    Matrix
+    Matrix,
+    shinythemes,
+    shinycssloaders
 Suggests: 
     covr,
     knitr,
