--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Authors@R:
              role = c("aut", "cre")),
       person("Tyler",
              email = "twiederich2@huskers.unl.edu",
-             role = c("aut")),
+             role = c("aut"))
+             )
 Description: This package generates palettes from images.
 License: MIT + file LICENSE
 Encoding: UTF-8
