--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -33,9 +33,7 @@ jobs:
         run: |
           covr::codecov(
             quiet = FALSE,
-            clean = FALSE,
-            #install_path = file.path(Sys.getenv("RUNNER_TEMP"), "package"), 
-            token = "{{ secrets.CODECOV_TOKEN }}"
+            clean = FALSE
           )
         shell: Rscript {0}
 
